--- a/dipo-9001/src/main/resources/templates/page/index.html
+++ b/dipo-9001/src/main/resources/templates/page/index.html
@@ -11,9 +11,9 @@
 <div th:replace="~{component/header.html}"></div>
 
 <div class=" layui-bg-blue">
-    1
 </div>
-<!--<div th:text="${session.get('username')}"></div>-->
+<div th:text="${session.get('username')}"></div>
+<div th:text="${session.get('ip')}"></div>
 
 </body>
 </html>
