简易的用户登录

--- a/dipo-9001/src/main/resources/templates/component/header.html
+++ b/dipo-9001/src/main/resources/templates/component/header.html
@@ -22,11 +22,11 @@
                 </dl>
             </li>
         </ul>
-        <ul class="layui-nav layui-layout-right">
+        <ul th:if="${session.get('username')!=null}" class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
                 <a href="javascript:;">
                     <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
-                    贤心
+                    <span th:text="${session.get('username')}"></span>
                 </a>
                 <dl class="layui-nav-child">
                     <dd><a href="">基本资料</a></dd>
@@ -34,6 +34,10 @@
                 </dl>
             </li>
             <li class="layui-nav-item"><a href="">退了</a></li>
+        </ul>
+
+        <ul th:if="${session.get('username')==null}" class="layui-nav layui-layout-right">
+            <li class="layui-nav-item"><a href="/login">登录</a></li>
         </ul>
     </div>
 </div>
