--- a/dipo-9001/src/main/resources/templates/component/header.html
+++ b/dipo-9001/src/main/resources/templates/component/header.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="ch" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>header</title>
-</head>
-<body class="layui-layout-body">
+
+<body class="layui-layout-body" th:fragment="header">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo">爱学社区</div>
+        <div ><a href="/index" class="layui-logo">轻学博客</a></div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
-            <li class="layui-nav-item"><a href="">控制台</a></li>
-            <li class="layui-nav-item"><a href="">商品管理</a></li>
-            <li class="layui-nav-item"><a href="">用户</a></li>
+            <li class="layui-nav-item"><a href="/index">程序员劝退</a></li>
+            <li class="layui-nav-item"><a href="">今天你bug了吗</a></li>
+            <li class="layui-nav-item"><a href="">心得体会/杂谈</a></li>
             <li class="layui-nav-item">
                 <a href="javascript:;">其它系统</a>
                 <dl class="layui-nav-child">
@@ -29,7 +26,7 @@
                     <span th:text="${session.get('username')}"></span>
                 </a>
                 <dl class="layui-nav-child">
-                    <dd><a href="/user/info">基本资料</a></dd>
+                    <dd><a href="http://localhost:9001/user/info">基本资料</a></dd>
                     <dd><a href="">安全设置</a></dd>
                     <dd><a href="javaScript:void(0);" onclick="logout()" >退出登录</a></dd>
                 </dl>
@@ -41,7 +38,7 @@
         </ul>
     </div>
 </div>
-<script th:src="@{layui.js}" charset="utf-8"></script>
+<script th:src="@{/layui.js}" charset="utf-8"></script>
 <script>
     //JavaScript代码区域
     layui.use('element', function () {
