--- a/dipo-9001/src/main/resources/templates/page/login.html
+++ b/dipo-9001/src/main/resources/templates/page/login.html
@@ -5,10 +5,9 @@
     <title>登录</title>
     <link th:href="@{/css/layui.css}" rel="stylesheet"/>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>
-    <script th:src="@{layui.js}" charset="utf-8"></script>
 </head>
 <body>
-<div th:replace="~{component/header.html}"></div>
+<div th:include="/component/header :: header"></div>
 
 <div class="layui-container" style="width: 50%;margin-top: 100px">
     <div class="layui-row">
