--- a/dipo-9001/src/main/resources/templates/page/register.html
+++ b/dipo-9001/src/main/resources/templates/page/register.html
@@ -69,7 +69,7 @@
                 $.ajax({
                     type: 'POST',
                     dataType: 'json',
-                    url: "http://localhost:9001/api/user",
+                    url: "/api/user",
                     headers: {"Content-Type": "application/json"},
                     data: JSON.stringify({
                         username: data.field.username,
@@ -78,7 +78,7 @@
                     success: (res) => {
                         console.log(res)
                         alert("注册成功");
-                        window.location.replace("http://localhost:9001/login");
+                        window.location.replace("/login");
                     }, error: (e) => {
                         console.log(e)
                         alert("注册失败！" + e.responseJSON.msg);
