--- a/dipo-9001/src/main/resources/templates/page/register.html
+++ b/dipo-9001/src/main/resources/templates/page/register.html
@@ -2,7 +2,7 @@
 <html lang="ch" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>登录</title>
+    <title>注册</title>
     <link th:href="@{/css/layui.css}" rel="stylesheet"/>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <script th:src="@{layui.js}" charset="utf-8"></script>
