--- a/dipo-9001/src/main/resources/templates/component/header.html
+++ b/dipo-9001/src/main/resources/templates/component/header.html
@@ -7,7 +7,7 @@
         <div ><a href="/index" class="layui-logo">轻学博客</a></div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
-            <li class="layui-nav-item"><a href="/index">程序员劝退</a></li>
+            <li class="layui-nav-item"><a href="/">程序员劝退</a></li>
             <li class="layui-nav-item"><a href="">今天你bug了吗</a></li>
             <li class="layui-nav-item"><a href="">心得体会/杂谈</a></li>
             <li class="layui-nav-item">
