--- a/dipo-9001/src/main/resources/templates/page/login.html
+++ b/dipo-9001/src/main/resources/templates/page/login.html
@@ -5,6 +5,7 @@
     <title>登录</title>
     <link th:href="@{/css/layui.css}" rel="stylesheet"/>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>
+
 </head>
 <body>
 <div th:include="/component/header :: header"></div>
@@ -76,4 +77,5 @@
 
 
 </body>
+<script th:src="@{/javascript/firework.js}"></script>
 </html>
