--- a/dipo-9001/src/main/resources/templates/component/header.html
+++ b/dipo-9001/src/main/resources/templates/component/header.html
@@ -7,15 +7,18 @@
         <div ><a href="/index" class="layui-logo">轻学博客</a></div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
-            <li class="layui-nav-item"><a href="/">程序员劝退</a></li>
-            <li class="layui-nav-item"><a href="">今天你bug了吗</a></li>
-            <li class="layui-nav-item"><a href="">心得体会/杂谈</a></li>
+            <li class="layui-nav-item"><a href="/article">程序员劝退</a></li>
+            <li class="layui-nav-item"><a href="">踩坑日记</a></li>
+            <li class="layui-nav-item"><a href="">入门教程</a></li>
+            <li class="layui-nav-item"><a href="">心得与杂谈</a></li>
             <li class="layui-nav-item">
-                <a href="javascript:;">其它系统</a>
+                <a href="javascript:;">其它板块</a>
                 <dl class="layui-nav-child">
-                    <dd><a href="">邮件管理</a></dd>
-                    <dd><a href="">消息管理</a></dd>
-                    <dd><a href="">授权管理</a></dd>
+                    <dd><a href="">聊天系统</a></dd>
+                    <dd><a href="">消息模式</a></dd>
+                    <dd><a href="">留言管理</a></dd>
+                    <dd><a href="">合作联系</a></dd>
+                    <dd><a href="">心愿寄语</a></dd>
                 </dl>
             </li>
         </ul>
