--- a/dipo-9001/src/main/resources/templates/page/article/index.html
+++ b/dipo-9001/src/main/resources/templates/page/article/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
-    <link th:href="@{/css/layui.css}" rel="stylesheet"/>
+    <link th:href="@{css/layui.css}" rel="stylesheet"/>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>
-    <script th:src="@{/layui.js}"></script>
+    <script th:src="@{layui.js}"></script>
 </head>
 <body>
 
-<div style="position: fixed;top:0;width: 100%;background-color: yellow;z-index:99999">
-    <div th:include="/component/header :: header">
+<div style="position: fixed;top:0;width: 100%;background-color: #acac19;z-index:99999">
+    <div th:include="component/header :: header">
     </div>
 </div>
+
 
 <div style="width: 90%;padding: 0 5%;height: 100%;margin-top: 80px">
     <div class="layui-row layui-col-space10">
@@ -151,5 +152,5 @@
 </script>
 
 </body>
-<script th:src="@{/javascript/firework.js}"></script>
+<script th:src="@{javascript/firework.js}"></script>
 </html>
