--- a/dipo-9001/src/main/resources/templates/page/index.html
+++ b/dipo-9001/src/main/resources/templates/page/index.html
@@ -3,25 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
-    <link th:href="@{/css/layui.css}" rel="stylesheet"/>
+    <link th:href="@{css/layui.css}" rel="stylesheet"/>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>
-    <script th:src="@{/layui.js}"></script>
+    <script th:src="@{layui.js}"></script>
 </head>
 <body>
-<div th:include="/component/header :: header">
+<div th:include="component/header :: header">
 </div>
-
+<div>
+    <div th:include="component/footer :: footer">
+    </div>
+</div>
 
 <div class="layui-carousel" id="img">
     <div carousel-item>
         <div>
-            <img th:src="@{/image/banner.jpg}" style="width:100%;height :100%"/>
+            <img th:src="@{image/banner.jpg}" style="width:100%;height :100%"/>
         </div>
         <div>
-            <img th:src="@{/image/banner2.jpg}" style="width:100%;height :100%"/>
+            <img th:src="@{image/banner2.jpg}" style="width:100%;height :100%"/>
         </div>
         <div>
-            <img th:src="@{/image/banner3.jpg}" style="width:100%;height :100%"/>
+            <img th:src="@{image/banner3.jpg}" style="width:100%;height :100%"/>
         </div>
     </div>
 </div>
@@ -114,5 +117,5 @@
 
 
 </body>
-<script th:src="@{/javascript/firework.js}"></script>
+<script th:src="@{javascript/firework.js}"></script>
 </html>
