--- a/dipo-9001/src/main/resources/templates/page/user/info.html
+++ b/dipo-9001/src/main/resources/templates/page/user/info.html
@@ -2,12 +2,12 @@
 <html lang="ch" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>登录</title>
+    <title>用户信息</title>
     <link th:href="@{/css/layui.css}" rel="stylesheet"/>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>
 </head>
 <body >
-<div th:include="/component/header :: header"></div>
+<div th:include="component/header :: header"></div>
 <div  class="layui-container" style="width: 50%;margin-top: 100px">
     <div class="layui-row">
         <div class="layui-col-md9">
