--- a/dipo-9001/src/main/resources/templates/page/article/index.html
+++ b/dipo-9001/src/main/resources/templates/page/article/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
-    <link th:href="@{css/layui.css}" rel="stylesheet"/>
+    <link th:href="@{/css/layui.css}" rel="stylesheet"/>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>
-    <script th:src="@{layui.js}"></script>
+    <script th:src="@{/layui.js}"></script>
 </head>
 <body>
 
