--- a/dipo-9001/src/main/resources/templates/page/index.html
+++ b/dipo-9001/src/main/resources/templates/page/index.html
@@ -54,13 +54,25 @@
             <fieldset class="layui-elem-field">
                 <legend style="font-weight: bold">lol</legend>
                 <div class="layui-field-box" style="text-indent: 2em">
-                    这里不知道写什么好耶，只能水水文字混混日子咯.
+                    从前从前有一个程序员长得像自行车，后来他在停车场被人骑走了.
                 </div>
             </fieldset>
         </div>
     </div>
+</div>
 
 
+<div style="width: 90%;padding: 0 5%">
+<div class="layui-row">
+    <div class="layui-col-md8">
+        <fieldset class="layui-elem-field">
+            <legend style="font-weight: bold">我说嘿</legend>
+            <div class="layui-field-box" style="text-indent: 2em">
+                从前从前有一个程序员长得像自行车，后来他在停车场被人骑走了.
+            </div>
+        </fieldset>
+    </div>
+</div>
 </div>
 
 
