--- a/dipo-9001/src/main/resources/templates/component/header.html
+++ b/dipo-9001/src/main/resources/templates/component/header.html
@@ -4,7 +4,7 @@
 <body class="layui-layout-body" th:fragment="header">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div ><a href="/index" class="layui-logo">轻学博客</a></div>
+        <div ><a href="/index" class="layui-logo">勤学博客后台管理</a></div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a href="/article">程序员劝退</a></li>
